.archive/kubernetes/apps/networking/ingresses/ingressRoutes/calibre-web/ingress-traefikCRD.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &name calibre-web
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ebooks.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
        - name: authelia
          namespace: networking
      services:
        - name: *name
          port: 8083
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
